--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   android_intent_plus: ^5.3.0
   file_picker: ^8.1.2
   socket_io_client: ^2.0.1
+  country_code_picker: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
